test/corpus/examples.txt
==================
Example 1
==================

module default {
    type Movie {
        required property title -> str;
    }
}

---

(source_file
  (module
    (identifier)
    (schema_declarations
      (type
        (identifier)
        (declarations
          (property
            (identifier)))))))
