test/corpus/properties.txt
==================
Property declaration
==================

module default {
    type Movie {
        property Title -> str;
    }
}

---

(source_file
  (module
    (identifier)
    (schema_declarations
      (object_type
        (identifier)
        (declarations
          (property
            (identifier)
            (type)))))))
